--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,89 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,400;6..12,600;6..12,800&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Nunito Sans', sans-serif;
+}
+body{
+    user-select: none;
+}
+.container{
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 0 1rem;
+}
+#root{
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.countryies{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    row-gap: 2.5rem;
+    flex-wrap: wrap;
+}
+.card_item{
+    width: 100%;
+    max-width: 264px;
+    height: 330px;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 0px 9px 4px rgba(14, 13, 13, 0.03);
+}
+.info{
+    padding-left: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
+   
+}
+img{
+    width: 100%;
+    width: 267px;
+    height: 160px;
+    border-radius: 5px 5px 0 0;
+}
+h3{
+    padding-left: 1.5rem;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 26px;
+    color: #111517;
+}
+span{
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 16px;
+    color: #111517;
+}
+strong{
+    font-weight: 600;
+}
+@media screen and (max-width:820px) {
+    .countryies{
+        justify-content: space-around;
+    }
+}
+
+@media screen and (max-width:600px) {
+    .countryies{
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width:300px) {
+   img{
+    width: 250px;
+   }
 }
